deploy/kubernetes/shared/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cigar-shared
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
